@@ -31,3 +31,4 @@ Changes in version 1.3.x
 + added new skin microbiome example data set 'peerj13075'
 + added splitOn and unsplitOn functions
 + CLR transformation: remove internal relative transformation
++ added mergeTreeSummarizedExperiment function
